More options and support of the settings flavours

--- a/templates/docker-registry.erb
+++ b/templates/docker-registry.erb
@@ -1,4 +1,4 @@
-SETTINGS_FLAVOR=default
+SETTINGS_FLAVOR=<%= settings_flavour %>
 REGISTRY_ADDRESS=<%= registry_address %>
 REGISTRY_PORT=<%= registry_port %>
 GUNICORN_WORKERS=<%= gunicorn_workers %>
