New docker registry version work

--- a/templates/docker-registry.yml.erb
+++ b/templates/docker-registry.yml.erb
@@ -81,5 +81,6 @@ swift:
     swift_region_name: <%= swift_region_name %>
 
 local:
+    loglevel: <%= loglevel %>
     storage: <%= local_storage %>
     storage_path: <%= local_storage_path %>
